package softwaredevelopment;

abstract class Figur {

}