package softwaredevelopment;

abstract class Figur2D extends Figur
{
    public abstract double getUmfang();
    public abstract double getFlaeche();
}
